Fix for logo alignment

--- a/wp-content/themes/giger-kms/src/sass/_header.scss
+++ b/wp-content/themes/giger-kms/src/sass/_header.scss
@@ -101,6 +101,11 @@ $full_height   : $logo_full_h + $height_gap;
 	}
 	
 	@include for(medium-screens) {			
+		margin-left: $logo_full_w + $height_gap;
+		height: $logo_full_h + $height_gap;
+	}
+	
+	@include for(xxlarge-screens) {			
 		margin-left: $logo_full_w + 5px;
 		height: $logo_full_h + $height_gap;
 	}	
@@ -211,7 +216,7 @@ h2.logo-name {
 			}
 		}
 		
-		@include for(exlarge-screens){
+		@include for(xxlarge-screens){
 			width: $logo_full_w ;
 			text-align: left;
 			left: -6px;
